<resources>
    <string name="app_name">星空日记</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Description">Description</string>
    <string name="note_alter">There are %s notes.\n</string>
    <string name="title_note">Diary\n\n</string>
    <string name="item_username">Username\n\n</string>
    <string name="item_slogan">This is my slogan @!!!</string>
    <string name="item_time">2023-12-10 00:00 </string>
    <string name="item_title">Title\n</string>
    <string name="item_content">ContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContent</string>
    <string name="item_delete">Delete</string>
    <string name="note_length">%d words</string>
    <string name="note_title">Title\n</string>
    <string name="note_content">Content\n</string>
    <string name="no_note">There is nothing!</string>
    <string name="Username">Username\n</string>
    <string name="password">Password\n</string>
    <string name="search_hint">Serch for diary\n</string>
    <string name="change_layout">切换布局</string>
    <string-array name="weather">
        <item> 晴 </item>
        <item> 多云 </item>
        <item> 阴</item>
        <item> 雨 </item>
        <item> 雪 </item>
        <item> 大风 </item>
    </string-array>
    <string-array name="mood">
        <item> 快乐 </item>
        <item> 悲伤 </item>
        <item> 焦虑</item>
        <item> 平静</item>
        <item> 孤独 </item>
        <item> 无聊 </item>
    </string-array>

</resources>